sorry for microcommits - fix prize spacing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,6 +42,10 @@ a,
   width: 80vw;
   line-height: 1.6;
 
+  .prizetext {
+    padding-right: 2rem;
+    max-width: 45vw;
+  }
   p {
     margin-right: 20px;
     width:100%;
@@ -131,6 +135,11 @@ a,
   }
   .prizes {
     flex-direction: column;
+    width: 95vw;
+    .prizetext {
+      max-width: 85vw;
+      padding: 0px;
+    }
   }
 }
 // media queries for phone
@@ -156,6 +165,10 @@ a,
   
   .prizes {
     flex-direction: column;
+    .prizetext {
+      max-width: 85vw;
+      padding: 0px;
+    }
   }
   .start {
     .dialog {
